# rs-dash

./: .gitignore  Cargo.toml  Compare.md  README.md  TESTING_GUIDE.md  TODO.md  build.rs  debug_pipeline.py  debug_positions.rs  demo.py  final_test.py  final_test.rs  simple_test.py  test.bat  test.sh  test_builtin_pipeline.py  test_c.c  test_cmd_sub.py  test_interactive_hang.py  test_issues.py  test_output.txt  test_pipeline_hang.py  test_pipeline_hang2.py  test_priority1.rs  test_rs_dash.py  test_runner.rs  test_script.sh  test_user_scenario.py
src/: integration_tests.rs  main.rs  module_tests.rs
src/modules/: arithmetic.rs  builtins.rs  control.rs  control_tests.rs  expansion.rs  functions.rs  grammar.rs  mod.rs  param_expand.rs  parser.rs  pipeline.rs  process_substitution.rs  redirection.rs  shell.rs  subshell.rs  tokens.rs  utils.rs
src/modules/builtins/: bracket.rs  cd.rs  clear.rs  echo.rs  exit.rs  false.rs  help.rs  mod.rs  pwd.rs  registry.rs  return.rs  test.rs  true.rs
test/: README.md  quick_test.py  run_all_tests.py  test_cd.rs  test_cd_bash.sh  test_cd_rust.rs  test_dash2.sh  test_escape2.rs  test_parallel.rs  test_pipeline.rs  test_utils.py
test/conformance/: test_arithmetic.py  test_param_expansion.py  test_posix.py
test/integration/: test_integration.py
test/regression/: test_regression.py
test/scripts/: test.bat  test.sh
test/unit/: test_basic.py  test_pipeline.py  test_pipeline_data.py  test_pipeline_simple.py
tests/: basic.rs  cross_platform.rs  integration.rs  standard_framework.rs
