[package]
name = "rs-dash"
version = "0.0.1"
edition = "2021"
description = "A Rust implementation of dash shell"
authors = ["rs-dash developers"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_pipe = "1.2.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
serial_test = "3.0.0"
which = "8.0.0"

